# SupplyChainMCP

./: .env.example  README.md  config.py  config.yaml  dashboard_components.py  mcp_client.py  pyproject.toml  requirements-streamlit.txt  requirements.txt  server.py  streamlit_app.py
Acknowledgements/: PR_0808_0101274016.json  PR_0808_0101277118.json  PR_0808_0101280386.json  PR_0808_0101283508.json  PR_0808_0101286887.json  PR_0822_0101274060.json  PR_0822_0101299851.json  PR_0822_0101302903.json  PR_0833_0101274131.json  PR_0833_0101299876.json  PR_0833_0101302918.json  PR_0844_0101274193.json  PR_0844_0101299911.json  PR_0844_0101302921.json  PR_0855_0101274228.json  PR_0855_0101299930.json  PR_0855_0101302926.json  PR_0870_0101274242.json  PR_0870_0101299932.json  PR_0870_0101302927.json  PR_0871_0101274251.json  PR_0871_0101299933.json
Forecasts/: Order_Proj__52853_JUVIA'S PLACE-2026-01-28.xlsx  Order_Proj__52853_JUVIA'S PLACE-2026-02-25.xlsx  Order_Proj__52853_JUVIA'S PLACE-2026-03-26.xlsx  Order_Proj__52853_JUVIA'S PLACE-2026-04-28.xlsx
Inventory/: Inventory29May2026.csv
cache/: metadata.db
models/: __init__.py  schemas.py
services/: __init__.py  acknowledgement_service.py  analytics_service.py  cache_service.py  forecast_service.py  inventory_service.py  matching_service.py  reporting_service.py  root_cause_service.py
tests/: test_acknowledgement_service.py  test_analytics_service.py  test_calendar_sorting.py  test_matching_service.py  test_po_forecast_lookup.py  test_root_cause_service.py  test_streamlit_filters.py  test_table_display.py
(+1 files in other folders)
