[tool.poetry]
name = "supplychainmcp"
version = "0.1.0"
description = "Supply Chain Intelligence MCP Server"
authors = ["SupplyChain Team <dev@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
dependencies = [
"fastmcp>=0.1.0",
"pandas>=2.0",
"polars>=0.18",
"duckdb>=0.8",
"pydantic>=2.0",
"openpyxl>=3.0",
"pyarrow>=12.0",
"rapidfuzz>=2.0",
"numpy>=1.24",
"scipy>=1.10",
"statsmodels>=0.14",
"scikit-learn>=1.2",
"plotly>=5.0",
"rich>=13",
"pytest>=7.0",
"python-dateutil>=2.8",
"mcp[cli]"
]